2005-04-01  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Making Changes): Cleanupy tweaks.

	* monotone.cc (my_poptStuffArgFile): New function to parse a file
	for more arguments and stuff them into the command line.
	(cpp_main): Add the -@ option
	* tests/t_at_sign.at, testsuite.at: Test it
	* monotone.1: Document it.

2005-03-31  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_log_depth.at: Cleanupy tweaks.

2005-03-31  Jeremy Cowgar  <jeremy@cowgar.com>

	* monotone.texi: Tutorial updated to include example of
	  editing/committing with MT/log
	* work.cc (has_contents_user_log) Added
	* work.hh (has_contents_user_log) Added
	* commands.cc (CMD(commit)): Checks to ensure both MT/log and the
	  --message option does not exist during commit.
	* transforms.hh (prefix_lines_with): Added
	* transforms.cc (prefix_lines_with): Added
	* sanity.cc (naughty_failure): Made use of prefix_lines_with()
	* ui.cc (inform): now handles messages w/embedded newlines
	* tests/t_commit_log_3.at: Created to test new functionality
	  added to CMD(commit)
	* testsuite.at: Added above test

2005-03-31  Richard Levitte  <richard@levitte.org>

	* monotone.cc: Add the --depth option...
	* app_state.hh (class app_state),
	  app_state.cc (app_state::set_depth): ... and the field and
	  method to store and set it.
	* commands.cc (CMD(log)): ... then handle it.

	* tests/t_log_depth.at: Add a test for 'log --depth=n'
	* testsuite.at: Add it.
	* monotone.texi (Informative): Document it.

2005-03-31  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_erase_ancestors): Accept zero arguments,
	and in such case print nothing.  (Important for scripting.)
	* commands.cc (automate):
	* monotone.texi (Automation):
	* tests/t_automate_erase_ancestors.at: Update accordingly.

2005-03-31  Nathaniel Smith  <njs@codesourcery.com>

	* automate.cc (automate_toposort): Accept zero arguments, and in
	such case print nothing.  (Important for scripting.)
	* commands.cc (automate):