@@ -1,8 +1,15 @@
-AT_SETUP([check that -@ behaves correctly])
+AT_SETUP([check that --xargs / -@ behave correctly])
 
 # Generate expected output, as we're testing using the output of 'list --help'
 AT_CHECK(RAW_MONOTONE list --help, [], [stdout], [ignore], [:], [:])
 mv stdout expout
+
+# Check that --xargs works at all
+AT_DATA([at_test.input], [--help
+])
+AT_CHECK(RAW_MONOTONE list --xargs=at_test.input, [], [expout], [ignore])
+
+# The rest of the checks use the short form, -@
 
 # Check that -@ works at all
 AT_DATA([at_test.input], [--help
@@ -20,7 +27,6 @@ AT_CHECK(RAW_MONOTONE -@ at_test.input --help, [], [expout], [ignore])
 ## than once...                                   -- Richard Levitte
 # Check that -@ used twice generates an error
 AT_DATA([experr], [monotone: misuse: -@ can currently only be used once.
-
 ])
 AT_DATA([at_test.input1], [list
 ])
