@@ -1,5 +1,9 @@
 2005-04-01  Richard Levitte  <richard@levitte.org>
 
+	* monotone.cc: Add the long name --xargs for -@.
+	* monotone.1: Document it.
+	* tests/t_at_sign.at: Remove extra empty line and test --xargs.
+
 	* monotone.texi (Making Changes): Cleanupy tweaks.
 
 	* monotone.cc (my_poptStuffArgFile): New function to parse a file
